@@ -27,6 +27,7 @@
 #include "ns3/random-variable.h"
 #include "ns3/double.h"
 #include "ns3/object-vector.h"
+#include "ns3/object-map.h"
 #include "ns3/traced-value.h"
 #include "ns3/callback.h"
 #include "ns3/trace-source-accessor.h"
@@ -134,6 +135,10 @@ public:
                      MakeObjectVectorAccessor (&AttributeObjectTest::DoGetVectorN,
                                                &AttributeObjectTest::DoGetVector),
                      MakeObjectVectorChecker<Derived> ())
+      .AddAttribute ("TestMap1", "help text",
+                     ObjectMapValue (),
+                     MakeObjectMapAccessor (&AttributeObjectTest::m_map1),
+                     MakeObjectMapChecker<Derived> ())
       .AddAttribute ("IntegerTraceSource1", "help text",
                      IntegerValue (-2),
                      MakeIntegerAccessor (&AttributeObjectTest::m_intSrc1),
@@ -192,6 +197,9 @@ public:
 
   void AddToVector1 (void) { m_vector1.push_back (CreateObject<Derived> ()); }
   void AddToVector2 (void) { m_vector2.push_back (CreateObject<Derived> ()); }
+
+  void AddToMap1 (uint32_t i) { m_map1.insert (std::pair <uint32_t, Ptr<Derived> > (i, CreateObject<Derived> ())); }
+
   void InvokeCb (double a, int b, float c) { m_cb (a,b,c); }
 
   void InvokeCbValue (int8_t a)
@@ -222,6 +230,7 @@ private:
   RandomVariable m_random;
   std::vector<Ptr<Derived> > m_vector1;
   std::vector<Ptr<Derived> > m_vector2;
+  std::map <uint32_t, Ptr<Derived> > m_map1;
   Callback<void,int8_t> m_cbValue;
   TracedValue<int8_t> m_intSrc1;
   TracedValue<int8_t> m_intSrc2;
@@ -723,6 +732,71 @@ ObjectVectorAttributeTestCase::DoRun (void)
 }
 
 // ===========================================================================
+// Test case for Object Map Attributes.
+// ===========================================================================
+class ObjectMapAttributeTestCase : public TestCase
+{
+public:
+  ObjectMapAttributeTestCase (std::string description);
+  virtual ~ObjectMapAttributeTestCase () {}
+
+private:
+  virtual void DoRun (void);
+};
+
+ObjectMapAttributeTestCase::ObjectMapAttributeTestCase (std::string description)
+  : TestCase (description)
+{
+}
+
+void
+ObjectMapAttributeTestCase::DoRun (void)
+{
+  Ptr<AttributeObjectTest> p;
+  ObjectMapValue map;
+
+  p = CreateObject<AttributeObjectTest> ();
+  NS_TEST_ASSERT_MSG_NE (p, 0, "Unable to CreateObject");
+
+  //
+  // When the object is first created, the Attribute should have no items in
+  // the vector.
+  //
+  p->GetAttribute ("TestMap1", map);
+  NS_TEST_ASSERT_MSG_EQ (map.GetN (), 0, "Initial count of ObjectVectorValue \"TestMap1\" should be zero");
+
+  //
+  // Adding to the attribute shouldn't affect the value we already have.
+  //
+  p->AddToMap1 (1);
+  NS_TEST_ASSERT_MSG_EQ (map.GetN (), 0, "Initial count of ObjectVectorValue \"TestMap1\" should still be zero");
+
+  //
+  // Getting the attribute again should update the value.
+  //
+  p->GetAttribute ("TestMap1", map);
+  NS_TEST_ASSERT_MSG_EQ (map.GetN (), 1, "ObjectVectorValue \"TestMap1\" should be incremented");
+
+  //
+  // Get the Object pointer from the value.
+  //
+  Ptr<Object> a = map.Get (0);
+  NS_TEST_ASSERT_MSG_NE (a, 0, "Ptr<Object> from VectorValue \"TestMap1\" is zero");
+
+  //
+  // Adding to the attribute shouldn't affect the value we already have.
+  //
+  p->AddToMap1 (2);
+  NS_TEST_ASSERT_MSG_EQ (map.GetN (), 1, "Count of ObjectVectorValue \"TestMap1\" should still be one");
+
+  //
+  // Getting the attribute again should update the value.
+  //
+  p->GetAttribute ("TestMap1", map);
+  NS_TEST_ASSERT_MSG_EQ (map.GetN (), 2, "ObjectVectorValue \"TestMap1\" should be incremented");
+}
+
+// ===========================================================================
 // Trace sources with value semantics can be used like Attributes.  Make sure
 // we can use them that way.
 // ===========================================================================
@@ -1172,6 +1246,7 @@ AttributesTestSuite::AttributesTestSuite ()
   AddTestCase (new AttributeTestCase<EnumValue> ("Check Attributes of type EnumValue"));
   AddTestCase (new AttributeTestCase<RandomVariableValue> ("Check Attributes of type RandomVariableValue"));
   AddTestCase (new ObjectVectorAttributeTestCase ("Check Attributes of type ObjectVectorValue"));
+  AddTestCase (new ObjectMapAttributeTestCase ("Check Attributes of type ObjectMapValue"));
   AddTestCase (new IntegerTraceSourceAttributeTestCase ("Ensure TracedValue<uint8_t> can be set like IntegerValue"));
   AddTestCase (new IntegerTraceSourceTestCase ("Ensure TracedValue<uint8_t> also works as trace source"));
   AddTestCase (new TracedCallbackTestCase ("Ensure TracedCallback<double, int, float> works as trace source"));
